# pump_raydium_trading_bot

./: .gitignore  Cargo.toml  README.md  metadata_20250917_074700_947.json
src/: lib.rs  main.rs  statics.rs
src/backend/: app.rs  config.rs  error.rs  mod.rs  server.rs  utils.rs
src/backend/auth/: jwt_service.rs  password_service.rs
src/backend/db/: bot_repository.rs  connection.rs  mod.rs  trade_repository.rs  user_repository.rs
src/backend/handlers/: auth.rs  bot.rs  mod.rs  trade.rs  users.rs
src/backend/models/: auth.rs  bot.rs  mod.rs  trade.rs  user.rs
src/backend/routes/: auth.rs  bot.rs  health.rs  mod.rs  trade.rs  users.rs
src/backend/services/: auth_service.rs  bot_service.rs  mod.rs  trade_service.rs  user_service.rs
src/config/: clients.rs  credentials.rs  mod.rs
src/instructions/: buy.rs  buy_exact_in.rs  mod.rs  sell.rs  sell_exact_in.rs  swap_base_in.rs  swap_base_input.rs  swap_base_out.rs  types.rs
src/service/: mod.rs
src/service/jito/: jito_confirm.rs  jito_regions.rs
src/service/nozomi/: nozomi_confirm.rs  nozomi_regions.rs
src/service/utils/: services.rs
src/service/zero_slot/: zero_slot_confirm.rs  zero_slot_regions.rs
src/utils/: blockhash.rs  build_and_sign.rs  log.rs  mod.rs  parse.rs  swap_quote.rs  utils.rs
